--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,11 @@
         "psr-4": {
             "DiStudy\\" : ""
         },
-        "classmap" : [""]
+        "classmap" : [""],
+        "ext-json": "*"
+    },
+    "require": {
+        "ext-pdo": "*",
+        "integral/flysystem-pdo-adapter": "^1.0"
     }
 }
